--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
   <title>Outcomes Job Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
-<link href="js/dist/vendors~App.style.00fdc2d0818c52fd5f75.css?25972c44e166ee5925bc" rel="stylesheet"></head>
+  
+<link href="js/dist/vendors~App.style.00fdc2d0818c52fd5f75.css?98e4611c21ec4f6bd571" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
+  </div>
 
-<script type="text/javascript" src="js/dist/vendors~App.e26ddf0673b89ab715e2.js?25972c44e166ee5925bc"></script><script type="text/javascript" src="js/dist/App.00432a272c5e6d5beb71.js?25972c44e166ee5925bc"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?25972c44e166ee5925bc"></script></body>
+<script type="text/javascript" src="js/dist/vendors~App.5057aa54056f4150a442.js?98e4611c21ec4f6bd571"></script><script type="text/javascript" src="js/dist/App.8c9630318273d481beef.js?98e4611c21ec4f6bd571"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?98e4611c21ec4f6bd571"></script></body>
 
 </html>
