--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,12 @@
   <title>Outcomes Job Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
+  
 </head>
 
 <body>
   <div id="app"></div>
+  </div>
 
 </body>
 
